# bnfc-python

./: .gitignore  .gitmodules  BNFC-python.cabal  CHANGELOG.md  LICENSE  README.md  cabal.project  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/: BNFCPythonBinding.hs  Paths_BNFC.hs
src/bnfc/: __init__.py  __main__.py  binding.i  binding.pyi
tests/: test_bnfc.py
