cabal-version:   3.0
name:            BNFC-python
version:         2.9.4.1
description:
  An experiment in publishing a Haskell library as a Python Wheel.

license:         MIT
license-file:    LICENSE
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
copyright:       (c) 2023 Wen Kokke
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
  setup-depends:
    , base       >=4
    , Cabal      >=2.0.0.2
    , directory  >=1
    , filepath   >=1

common warnings
  ghc-options: -Wall

foreign-library _binding
  import:             warnings
  type:               native-shared

  -- 01-04-2023:
  -- Standalone builds appear to work with macOS builds of GHC
  if os(osx)
    options: standalone

  if os(windows)
    options:      standalone
    mod-def-file: src/bnfc/binding.def

  c-sources:          src/bnfc/binding_wrap.c
  hs-source-dirs:     src vendor/bnfc/source/main
  other-modules:
    BNFCPythonBinding
    Main
    Paths_BNFC
    Paths_BNFC_python

  build-depends:
    , base  >=4.7     && <5
    , BNFC  ==2.9.4.1

  default-language:   Haskell2010
  default-extensions: LambdaCase
